src/unfold/styles.css
/* ... */
@theme {
  --font-sans: 'Inter', sans-serif;
}

@theme inline{
  --radius-default: var(--border-radius, 6px);

  --color-primary-50: var(--color-primary-50);
  --color-primary-100: var(--color-primary-100);
  --color-primary-200: var(--color-primary-200);
  --color-primary-300: var(--color-primary-300);
  --color-primary-400: var(--color-primary-400);
  --color-primary-500: var(--color-primary-500);
  --color-primary-600: var(--color-primary-600);
  --color-primary-700: var(--color-primary-700);
  --color-primary-800: var(--color-primary-800);
  --color-primary-900: var(--color-primary-900);
  --color-primary-950: var(--color-primary-950);

  --color-base-50: var(--color-base-50);
  --color-base-100: var(--color-base-100);
  --color-base-200: var(--color-base-200);
  --color-base-300: var(--color-base-300);
  --color-base-400: var(--color-base-400);
  --color-base-500: var(--color-base-500);
  --color-base-600: var(--color-base-600);
  --color-base-700: var(--color-base-700);
  --color-base-800: var(--color-base-800);
  --color-base-900: var(--color-base-900);
  --color-base-950: var(--color-base-950);

  --color-font-subtle-light: var(--color-font-subtle-light);
  --color-font-subtle-dark: var(--color-font-subtle-dark);
  --color-font-default-light: var(--color-font-default-light);
  --color-font-default-dark: var(--color-font-default-dark);
  --color-font-important-light: var(--color-font-important-light);
  --color-font-important-dark: var(--color-font-important-dark);
}

@utility bg-striped {
  background-image: repeating-linear-gradient(45deg, var(--color-base-100), 0px, var(--color-base-100) 1px, transparent 2px, transparent 10px);

  @variant dark {
    background-image: repeating-linear-gradient(45deg, var(--color-base-800) 0px, var(--color-base-800) 1px, transparent 2px, transparent 10px);
  }
}

@utility bg-striped-dark {
  background-image: repeating-linear-gradient(45deg, var(--color-base-800) 0px, var(--color-base-800) 1px, transparent 2px, transparent 10px);
}

@utility scrollbar-default {
  @apply scrollbar-thin scrollbar-thumb-base-900/40 dark:scrollbar-thumb-base-400/40 scrollbar-track-transparent;
}

@utility text-important {
 @apply text-font-important-light dark:text-font-important-dark;
}

@utility text-default {
  @apply text-font-default-light dark:text-font-default-dark;
}

@utility text-subtle {
  @apply text-font-subtle-light dark:text-font-subtle-dark;
}

@utility text-icon {
  @apply text-base-400 dark:text-base-500;
}

@utility text-icon-action {
  @apply cursor-pointer text-base-400 dark:text-base-500 hover:text-base-700 dark:hover:text-base-200;
}

@utility text-link {
  @apply text-primary-600 dark:text-primary-500;
}

@utility data-row {
  @apply hover:bg-base-100 dark:hover:bg-base-50/4;
}

@utility field-sizing-content {
  field-sizing: content;
}

@utility border-spacing-none {
  border-spacing: 0;
}

@utility transition-move {
  transition-property: transform,translate,scale,rotate,margin;
}

@utility material-symbols-outlined {
  font-family: 'Material Symbols Outlined';
  font-weight: normal;
  font-style: normal;
  font-size: 18px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -moz-font-feature-settings: 'liga';
  -moz-osx-font-smoothing: grayscale;
}

@layer components {
  .tooltip {
    @apply relative;

    @variant after {
      @apply absolute bg-base-900 content-[attr(data-tooltip)] hidden py-1 px-1.5 rounded-default text-xs text-white left-1/2 -top-2 -translate-x-1/2 -translate-y-full whitespace-nowrap z-[1000];
    }

    @variant before {
      @apply absolute border-4 border-base-900 left-1/2 -translate-x-1/2 h-0 hidden rotate-45 -top-3.5 w-0 z-[999];
    }

    @variant dark {
      @variant after {
        @apply bg-base-700;
      }

      @variant before {
        @apply border-base-700;
      }
    }

    @variant hover {
      @variant after {
        @apply block;
      }

      @variant before {
        @apply block;
      }
    }
  }

  .tooltip-bottom {
    @variant after {
      @apply -bottom-2 top-auto translate-y-full;
    }

    @variant before {
      @apply -bottom-3.5 top-auto;
    }
  }

  .tooltip-left {
    @variant after {
      @apply -left-2 top-1/2 -translate-y-1/2 -translate-x-full;
    }

    @variant before {
      @apply -left-3.5 top-1/2 -translate-y-1/2 translate-x-[0px];
    }
  }

  .tooltip-right {
    @variant after {
      @apply left-auto -right-2 top-1/2 -translate-y-1/2 translate-x-full;
    }

    @variant before {
      @apply left-auto -right-3.5 top-1/2 -translate-y-1/2 translate-x-[0px];
    }
  }
}


@utility scrollable-top {
  @apply after:absolute after:content-[''] after:bg-linear-to-t after:from-base-100 after:h-4 after:left-0 after:right-0 after:-top-px after:-translate-y-full dark:after:bg-none;
}

@utility md-16 {
  font-size: 16px;
}

@utility md-18 {
  font-size: 18px;
}

.errorlist {
  @apply *:before:align-bottom *:before:content-['warning'] *:before:material-symbols-outlined *:before:mr-1;
}

[x-cloak] {
  @apply hidden!;
}

.asteriskField {
  @apply text-red-600;
}

.sortable-ghost {
  @apply opacity-50;
}

.empty-form {
  @apply hidden;
}

/*******************************************************
 Dialog
 *******************************************************/
dialog::backdrop {
  @apply bg-transparent;
}

/*******************************************************
 Search
 *******************************************************/
input[type="search"]::-webkit-search-cancel-button {
  @apply z-10 dark:invert;
}

/*******************************************************
 Table
 *******************************************************/
table tr.selected td,
table tr.selected th {
  @apply bg-yellow-200/[.10] dark:bg-white/[.03];
}
/* ... */

